# tactile_filters

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  Calibration.h  PieceWiseLinearCalib.cpp  PieceWiseLinearCalib.h  README.md  Range.cpp  Range.h  TactileValue.cpp  TactileValue.h  TactileValueArray.cpp  TactileValueArray.h  package.xml  tactile_filtersConfig.cmake.in
.github/workflows/: ci.yaml  format.yaml
test/: CMakeLists.txt  test_PieceWiseLinearCalib.cpp  test_TactileValueArray.cpp  trapez.yaml
