<package>
  <name>tactile_filters</name>
  <version>0.0.1</version>
  <description>filters and calibration tools for tactile sensors</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>

  <author email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</author>

  <license>LGPLv3</license>

  <build_depend>pkg-config</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
